--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "axios": "^1.6.2",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.2",
     "postcss": "^8",
